2001-05-18  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* keyactions.cc, gamewin.*: you can now specify a framenum and quality
	for the 'useitem' action

2001-05-18  Jeff Freedman  <jeff@amy.nerble.net>

	* Exult is much more liberal about what you can take or move.
	* Fixed crash during resurrection.

2001-05-17  Tristan Tarrant  <nadir@users.sourceforge.net>

	* sigame.cc: allow splash screen to be interrupted
	
	* gamewin.cc, audio/Audio.cc, audio/Mixer.cc, 
	  audio/midi_drivers/Timidity_binary.cc, actors.cc,
	  schedule.cc:
	  be verbose only when compiled with debugging

	* tools/.cvsignore: Add splitshp

2001-05-17  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc: Added support for the 'protected' halo button and the
	'protect' combat mode.
	* actors.h: In SI Knight's Test, the Usecode for the invisible
	pikeman stops repeating when you kill him.
	* animate.cc:  Fixed body parts animation on Erstam's island.
	
2001-05-16  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in: fixed checks for getaddrinfo() and mkstemp()

2001-05-16  Jeff Freedman  <jeff@amy.nerble.net>

	* NPC's (along with guards) attack you if you attack them.

2001-05-15  Ryan Nunn <triforce@merlin.net.au>
	* audio/xmidi.cc: Amazing optimization. 2 Lines of code added,
	  potential 100x speed increase when reading .xmi files.

2001-05-15  Jeff Freedman  <jeff@amy.nerble.net>

	* Audio.cc: Fixed "Chipmunk Guardian"!  (Playback speed for
	Guardian is now correct.)

2001-05-14  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* tools/Makefile.am, tools/splitshp.cc: split a shape into its frames
	
2001-05-13  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.spec.in: added exult_bg.flx... ouch!
	
2001-05-12  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gump_utils.cc: ctrl-alt-s takes screenshots in Modal_gump mode

2001-05-12  Dancer Vesperman <dancer@users.sourceforge.net>
	* configure.in: Extend header file checks: sys/types, sys/socket and