@@ -1,6 +1,7 @@
 2001-05-18  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* keyactions.cc, gamewin.*: you can now specify a framenum and quality
 	for the 'useitem' action
+	* server.cc: define PF_LOCAL in Solaris
 
 2001-05-18  Jeff Freedman  <jeff@amy.nerble.net>
 
